@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam nodesep 45
skinparam ranksep 45
' Singleton (Holder Idiom) - sessione utente e modalità applicativa
class "SessionManager" {
  - loggedUser : UtenteBean
  - SessionManager()
  {static} + getInstance() : SessionManager
  + getLoggedUser() : UtenteBean
  + setLoggedUser(UtenteBean) : void
  + logout() : void
}
class "SessionManager$Container" {
  - INSTANCE : SessionManager
}
SessionManager +-- SessionManager$Container
SessionManager$Container ..> SessionManager : crea

class "ApplicationModeManager" {
  - activeMode : String
  - factory : DAOFactory
  - ApplicationModeManager()
  {static} + getInstance() : ApplicationModeManager
  + getActiveMode() : String
  + setActiveMode(String) : void
  + getDAOFactory() : DAOFactory
}
class "ApplicationModeManager$Container" {
  - INSTANCE : ApplicationModeManager
}
ApplicationModeManager +-- ApplicationModeManager$Container
ApplicationModeManager$Container ..> ApplicationModeManager : crea
@enduml